# chia-skills

./: .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  SKILL.md  cats_by_asset_id.json
.github/workflows/: release-binaries.yml  release.yml
crates/chia-inspect/: Cargo.toml
crates/chia-inspect-core/: Cargo.toml
crates/chia-inspect-core/src/: error.rs  input.rs  inspect.rs  lib.rs  recognize.rs  schema.rs  util.rs
crates/chia-inspect-core/tests/: inspect_golden.rs  recognize_layers.rs
crates/chia-inspect-core/tests/fixtures/: simple_inspection.json  simple_mempool_blob.json
crates/chia-inspect/src/: main.rs
crates/clvm-workbench/: Cargo.toml
crates/clvm-workbench/src/: main.rs
