[workspace]
members = [
  "crates/chia-inspect-core",
  "crates/chia-inspect",
  "crates/clvm-workbench",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.32", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
chia-consensus = "0.36.1"
chia-bls = "0.36.1"
chia-protocol = "0.36.1"
chia-traits = "0.36.1"
chia-secp = "0.36.1"
chia-sha2 = "0.36.1"
chia-puzzle-types = "0.36.1"
clvm-traits = { version = "0.36.1", features = ["derive", "chia-bls", "chia-secp"] }
clvm-utils = "0.36.1"
chia-puzzles = "0.20.3"
clvmr = "=0.16.2"
chialisp = "0.4.1"
chia-sdk-driver = { git = "https://github.com/xch-dev/chia-wallet-sdk", tag = "0.33.0" }
chia-sdk-types = { git = "https://github.com/xch-dev/chia-wallet-sdk", tag = "0.33.0" }
