[package]
name = "chia-inspect-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chia-consensus.workspace = true
chia-bls.workspace = true
chia-protocol = { workspace = true, features = ["serde"] }
chia-traits.workspace = true
chia-puzzle-types.workspace = true
clvm-utils.workspace = true
clvmr.workspace = true
chialisp.workspace = true
chia-sdk-driver.workspace = true
chia-sdk-types.workspace = true
